# kt-cropper

./: .gitignore  README.md  main.py  pyproject.toml
cropper/: __main__.py  cli.py
cropper/core/: processor.py
cropper/models/: __init__.py  models.py
cropper/utils/: logger.py
docs/: crop-manifest-2.json  crop-manifest-3.json  crop-manifest.md  examples.md  minimal-crop-manifest.json
examples/: README.md  crop-manifest-1.json  crop-manifest-4.json
kt_cropper/: __main__.py  cli.py
kt_cropper/core/: processor.py
kt_cropper/models/: __init__.py  models.py
